<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:orderInCategory="1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_sort_by_popular"
            android:orderInCategory="1"
            android:title="@string/title_most_popular"
            android:checked="true"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_sort_by_top_rated"
            android:orderInCategory="2"
            android:title="@string/title_top_rated"
            android:checked="false"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_sort_by_favorites"
            android:orderInCategory="3"
            android:title="@string/title_favorites"
            android:checked="false"
            app:showAsAction="never" />

    </group>
</menu>