<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.movies.ui.detail.DetailActivityViewModel" />

        <variable
            name="detailItem"
            type="com.example.android.movies.ui.detail.DetailItem.DetailItemDetail" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/iv_movie_top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="@dimen/movie_detail_poster_width"
                android:layout_height="0dp"
                android:contentDescription="@string/accessibility_poster"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                tools:src="@android:color/white"
                app:layout_constraintDimensionRatio="@string/poster_dimension_ratio" />

            <include
                layout="@layout/detail_movie_blurb_include"
                android:id="@+id/iv_movie_blurb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_details_padding"
                bind:detailItem="@{detailItem}"
                app:layout_constraintLeft_toRightOf="@+id/iv_movie_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/movie_details_padding"
                android:contentDescription="@string/mark_favorite"
                android:drawableStart="@{detailItem.movie.isFavorite() ? @drawable/ic_favorite_24dp : @drawable/ic_favorite_border_24dp}"
                android:drawablePadding="@dimen/movie_details_small_padding"
                android:padding="@dimen/movie_grid_small_padding"
                android:background="@{detailItem.movie.isFavorite() ? @color/detail_favorite_background : @color/detail_favorite_background_disabled }"
                android:text="@string/mark_favorite"
                android:gravity="center"
                android:textColor="@color/movieDetailsTextColor"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.onFavorite(detailItem.movie)}"

                app:layout_constraintLeft_toLeftOf="@id/iv_movie_blurb"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_blurb" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tv_movie_overview"
            tools:text="overview"
            android:text="@{detailItem.movie.getOverviewText(context)}"
            style="@style/movie_detail_overview" />

    </LinearLayout>

</layout>